--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <header class="header">
     <div class="logo-header">
-        <img src="img/logo_azul1.png" alt="logo" height="100" width="200">
+        <img src="img/logo_azul1.png" alt="logo" >
     </div>
     <nav class="menu">
         <ul>
@@ -22,9 +22,6 @@
     </nav>
 </header>
 <body>
-    <h1>
-        FULLER <br>
-        ENGLISH
-    </h1>
+    
 </body>
 </html>
