--- a/nosotros.html
+++ b/nosotros.html
@@ -10,14 +10,14 @@
 <body>
     <header class="header">
         <div class="logo-header">
-            <img src="img/index/perro.png" alt="">
+            <img src="img/logo_azul1.png" alt="logo" >
         </div>
         <nav class="menu">
             <ul>
                 <li><a href="index.html">Inicio</a> </li>
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="contactos.html">Contactos</a></li>
-                <li><a href="admisiones.html"">Admisiones</a></li>
+                <li><a href="admisiones.html">Admisiones</a></li>
             </ul>
         </nav>
     </header>
