--- a/index.html
+++ b/index.html
@@ -11,72 +11,109 @@
     <link rel="shortcut icon" href="img/icono.png"> 
     <title>FULLER ENGLISH</title>
 </head>
-<header class="header">
-    <div class="logo-header">
-        <img src="img/logo_azul1.png" alt="logo" >
-    </div>
-    <nav class="menu">
-        <ul>
-            <li><a href="index.html">Inicio</a> </li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="contactos.html">Contactos</a></li>
-            <li><a href="admisiones.html">Admisiones</a></li>
-        </ul>
-    </nav>
-</header>
-<body>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="img/portada.jpg" alt="First slide">
-                <div class="carousel-caption portada-titulo d-none d-md-block">
-                    <h1>Aumenta tu nivel de ingles </h1>
-                    <h5>Con FULLER ENGLISH</h5>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/img4.jpg" alt="Second slide">
-                <div class="carousel-caption portada-titulo d-none d-md-block">
-                    <h1>Aprende ingles desde tu hogar</h1>
-                    <h5>Con nuestras clases en Linea</h5>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/img6.jpg" alt="Third slide">
-                <div class="carousel-caption portada-titulo d-none d-md-block">
-                    <h1>Profesores altamente capacitados</h1>
-                    <h5>Con certificación internacional</h5>
-                </div>
-            </div>
+
+<body >
+    <header class="header">
+        <div class="logo-header">
+            <img src="img/logo_azul1.png" alt="logo" >
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-    
+        <nav class="menu">
+            <ul>
+                <li><a href="index.html">Inicio</a> </li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="contactos.html">Contactos</a></li>
+                <li><a href="admisiones.html">Admisiones</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="cuerpo">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="img/portada.jpg" alt="First slide">
+                    <div class="carousel-caption portada-titulo d-none d-md-block">
+                        <h1>Aumenta tu nivel de inglés </h1>
+                        <h5>Con FULLER ENGLISH</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img/img4.jpg" alt="Second slide">
+                    <div class="carousel-caption portada-titulo d-none d-md-block">
+                        <h1>Aprende inglés desde tu hogar</h1>
+                        <h5>Con nuestras clases en Linea</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img/img6.jpg" alt="Third slide">
+                    <div class="carousel-caption portada-titulo d-none d-md-block">
+                        <h1>Profesores altamente capacitados</h1>
+                        <h5>Con certificación internacional</h5>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <section class="portafolio">
+            <div class="contenedor">
+                <h2 class="titulo">¡Cumplimos 10 añós enseñando inglés!</h2>
+                <div class="galeria-port">
+                    <div class="imagen-port">
+                        <img src="img/img4.jpg" alt="">
+                        <div class="hover-galeria">
+                            <img src="img/icono1.png" alt="">
+                            <p>Nuestro trabajo</p>
+                        </div>
+                    </div>
+                    <div class="imagen-port">
+                        <img src="img/img6.jpg" alt="">
+                        <div class="hover-galeria">
+                            <img src="img/icono1.png" alt="">
+                            <p>Nuestro trabajo</p>
+                        </div>
+                    </div>
+                    <div class="imagen-port">
+                        <img src="img/img7.jpg" alt="">
+                        <div class="hover-galeria">
+                            <img src="img/icono1.png" alt="">
+                            <p>Nuestro trabajo</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="clientes contenedor">
+            <marquee behavior="alternate" direction="down"><h2 class="titulo">Que dicen nuestros clientes</h2></marquee>
+            <div class="cards">
+                <div class="card">
+                    <img src="img/face1.jpg" alt="">
+                    <div class="contenido-texto-card">
+                        <h4>Janeth</h4>
+                        <p>Novicompu es una de las mejores empresas para la adquisición de tecnología actual, cuenta con los mejores precios y calidad. ⭐⭐⭐⭐⭐</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/face2.jpg" alt="">
+                    <div class="contenido-texto-card">
+                        <h4>Ismael</h4>
+                        <p>Gracias a Novicompu pude obtener el producto que quería en un precio accesible, ofrecen mantenimiento a los productos y sistemas de manera eficiente. <br>⭐⭐⭐⭐⭐</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
-
-
-    <!--
-    <div class="slider">
-        <ul>
-            <li><img src="img/portada.jpg" alt=""></li>
-            <li><img src="img/img3.jpg" alt=""></li>
-            <li><img src="img/img4.jpg" alt=""></li>
-            <li><img src="img/img6.jpg" alt=""></li>
-        </ul>
-    </div>
-    -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
